<resources>
    <string name="app_name">Конструктор тестов</string>
    <string name="my_test">Мои тесты</string>
    <string name="list_test">Список тестов</string>
    <string name="stat">Статистика</string>
    <string name="name_test">Название теста</string>
    <string name="difficult">Сложность</string>
    <string name="question">Вопрос</string>
    <string name="option">Вариант</string>
    <string name="new_test">Новый тест</string>
    <string name="new_question">Новый вопрос</string>
    <string name="question_text">Текст вопроса</string>
    <string name="answer1">Ответ 1</string>
    <string name="answer2">Ответ 2</string>
    <string name="answer3">Ответ 3</string>
    <string name="answer4">Ответ 4</string>
    <string name="answer">Ответы:</string>
    <string name="save">Записать</string>
    <string name="next">Следующий</string>
    <string name="previous">Предыдущий</string>
    <string name="read_db">Читать из базы</string>
    <string name="clear_db">Очистить базу</string>
    <string name="begin_test">Начать тест</string>
    <string name="previous_button">Предыдущий вопрос</string>
    <string name="next_button">Следующий вопрос</string>
</resources>
